# the-puzzle-network-maf

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Sample1.html  Sample2.html  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/the_puzzle_network/: __init__.py  logging.py  utils.py
src/the_puzzle_network/agents/: __init__.py  puzzle_base_agent.py  puzzle_classifier_agent.py  puzzle_formatter_agent.py  puzzle_generator_agent.py  puzzle_publisher_agent.py
src/the_puzzle_network/tools/: __init__.py  puzzle_publisher_tool.py
src/the_puzzle_network/workflows/: __init__.py  puzzle_network_workflow.py
tests/: test_agents.py  test_tools.py
